syntax = "proto3";

//package ScoreService;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ScoreService {
  rpc SendScore(Score) returns (google.protobuf.Empty);
  rpc GetScores(google.protobuf.Empty) returns (Scores);
}

message Score {
  string player1_name = 1;
  string player1_uuid = 2;
  int32 player1_score = 3;
  string player2_name = 4;
  string player2_uuid = 5;
  int32 player2_score = 6;
  google.protobuf.Timestamp timestamp = 7;
}

message Scores {
  repeated Score scores = 1;
}